add endpoint to lock workspace
