# coderd/apidoc/swagger.json
@@ -8281,6 +8281,11 @@
         "latest_build": {
           "$ref": "#/definitions/codersdk.WorkspaceBuild"
         },
+        "locked_at": {
+          "description": "LockedAt being non-nil indicates a workspace that has been locked.\nA locked workspace is no longer accessible by a user and must be\nunlocked by an admin. It is subject to deletion if it breaches\nthe duration of the locked_ttl field on its template.",
+          "type": "string",
+          "format": "date-time"
+        },
         "name": {
           "type": "string"
         },
